--- a/chmc_wbms/static/css/admin_dashboard.css
+++ b/chmc_wbms/static/css/admin_dashboard.css
@@ -60,6 +60,10 @@ body {
     background-color: #e9f1ff;
     color: #007bff;
   }
+  .pagination {
+    justify-content: center;
+    margin-top: 20px;
+  }
 
 .gradient-custom {
     /* fallback for old browsers */
