--- a/chmc_wbms/templates/admin/admin_dashboard.html
+++ b/chmc_wbms/templates/admin/admin_dashboard.html
@@ -51,7 +51,7 @@
               </tr>
             </thead>
             <tbody>
-              {% for account in accounts %}
+              {% for account in page_obj %}
                 <tr>
                   <td>{{ account.account_id }}</td>
                   <td>{{ account.full_name }}</td>
@@ -70,6 +70,31 @@
             </tbody>
           </table>
         </div>
+      
+        <!-- Pagination Controls -->
+        <nav aria-label="Page navigation">
+          <ul class="pagination">
+            {% if page_obj.has_previous %}
+              <li class="page-item">
+                <a class="page-link" href="?page=1">&laquo; First</a>
+              </li>
+              <li class="page-item">
+                <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+              </li>
+            {% endif %}
+            <li class="page-item active">
+              <span class="page-link">{{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</span>
+            </li>
+            {% if page_obj.has_next %}
+              <li class="page-item">
+                <a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a>
+              </li>
+              <li class="page-item">
+                <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}">Last &raquo;</a>
+              </li>
+            {% endif %}
+          </ul>
+        </nav>
       </div>
     </div>
     <div class="tab-pane fade" id="record" role="tabpanel" aria-labelledby="record-tab">
