--- a/chmc_wbms/templates/admin/create_account.html
+++ b/chmc_wbms/templates/admin/create_account.html
@@ -4,6 +4,19 @@
 
 {% block content %}
 <div class="container">
+    {% if messages %}
+        <div class="alert-messages">
+            {% for message in messages %}
+              {% if form.non_field_errors %}
+                <div class="alert alert-danger" role="alert">
+                  {% for error in form.non_field_errors %}
+                    <p>{{ error }}</p>
+                  {% endfor %}
+                </div>
+              {% endif %}
+            {% endfor %}
+        </div>
+    {% endif %}
     <form method="post">
         {% csrf_token %}
         <div class="b-example-divider"></div>
@@ -44,11 +57,11 @@
           <div class="mb-3">
             <h5 class="mb-2">Account Type</h5>
             <div class="form-check form-check-inline">
-                <input type="radio" class="form-check-input" name="account_type" id="accountEmployee" value="employee" checked>
+                <input type="radio" class="form-check-input" name="account_type" id="accountEmployee" value="employee" required checked>
                 <label class="form-check-label" for="accountEmployee">Employee</label>
             </div>
             <div class="form-check form-check-inline">
-                <input type="radio" class="form-check-input" name="account_type" id="accountDoctor" value="Associated Doctor">
+                <input type="radio" class="form-check-input" name="account_type" id="accountDoctor" value="assoc_doctor" required>
                 <label class="form-check-label" for="accountDoctor">Associated Doctor</label>
             </div>
         </div>
